More work towards compiling Common.